--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,18 @@
 
 /* Your CSS Code here. */
+.holder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.item {
+  width: 100px;
+  height: 100px;
+}
+
+.item-1 {
+  background-color: red;
+}
